# sisyphus

./: .gitignore
actix/: Cargo.toml  Dockerfile  deploy.yaml
actix/src/: db.rs  main.rs  models.rs  schemas.rs  test.rs
actix/src/handlers/: mod.rs  tasks.rs  users.rs
benchmark/: Dockerfile  bench.py  deploy.yaml
fastapi/: Dockerfile  app.py  deploy.yaml  requirements.test.txt  requirements.txt  test.py
