[package]
name = "sisyphus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
mongodb = "2.8.2"
serde = "1.0.201"
serde_json = "1.0.117"
strum_macros = "0.26.2"
tokio = "1.37.0"
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
structopt = "0.3.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }